--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.11.4",
-    "astro": "^1.4.5"
+    "@astrojs/react": "^1.1.4",
+    "@astrojs/vercel": "^2.1.0",
+    "astro": "^1.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
