--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^0.11.4",
     "@astrojs/react": "^1.1.4",
     "@astrojs/vercel": "^2.1.0",
+    "@supabase/supabase-js": "^1.35.7",
     "astro": "^1.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
